--- a/index.html
+++ b/index.html
@@ -7,15 +7,38 @@
     <title>Document</title>
   </head>
   <body>
-    <section>
-      <div class="rectangle big"></div>
-      <div class="container">
-        <div class="circle"></div>
-        <div class="rectangles">
-          <div class="rectangle medium"></div>
-          <div class="rectangle small"></div>
+    <main class="container-wrapper">
+      <section class="outercontainer">
+        <div class="rectangle big"></div>
+        <div class="container">
+          <div class="circle"></div>
+          <div class="rectangles">
+            <div class="rectangle medium"></div>
+            <div class="rectangle small"></div>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+      <section class="outercontainer">
+        <div class="rectangle big"></div>
+        <div class="container">
+          <div class="circle"></div>
+          <div class="rectangles">
+            <div class="rectangle medium"></div>
+            <div class="rectangle small"></div>
+          </div>
+        </div>
+      </section>
+      <section class="outercontainer">
+        <div class="rectangle big"></div>
+        <div class="container">
+          <div class="circle"></div>
+          <div class="rectangles">
+            <div class="rectangle medium"></div>
+            <div class="rectangle small"></div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <script src="main.js"></script>
   </body>
 </html>
