--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
           </div>
         </div>
       </section>
+      <section class="outercontainer">
+        <div class="rectangle big"></div>
+        <div class="container">
+          <div class="circle"></div>
+          <div class="rectangles">
+            <div class="rectangle medium"></div>
+            <div class="rectangle small"></div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="main.js"></script>
   </body>
