--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Task A</title>
   </head>
   <body>
     <main class="container-wrapper">
+      <section class="outercontainer">
+        <div class="rectangle big"></div>
+        <div class="container">
+          <div class="circle"></div>
+          <div class="rectangles">
+            <div class="rectangle medium"></div>
+            <div class="rectangle small"></div>
+          </div>
+        </div>
+      </section>
       <section class="outercontainer">
         <div class="rectangle big"></div>
         <div class="container">
